--- a/4.ATM/src/main/resources/atmChangePIN.fxml
+++ b/4.ATM/src/main/resources/atmChangePIN.fxml
@@ -20,7 +20,7 @@
             <Font size="14.0" />
          </font>
       </Label>
-      <TextField id="textpin1" layoutX="158.0" layoutY="45.0" prefHeight="25.0" prefWidth="101.0" />
+      <TextField id="text1" layoutX="158.0" layoutY="45.0" prefHeight="25.0" prefWidth="101.0" />
       <TextField id="text2" layoutX="158.0" layoutY="104.0" prefHeight="25.0" prefWidth="101.0" />
    </children>
 </Pane>
